# school-projects

./: README.md
AA/class 2/: pratica2.py
AA/tp2/: tp2.py
AA/trabalho1/: tp1.py
AC/: a.c  a2.c  a3.c  calc.s  calc2.s  calc3.s
APDC/Site/: pom.xml
BD/: apagar_bd.sql  create_tables.sql  exercicios_praticas.sql  f452.sql  test_add.sql  testar_insert.sql
CAD/cadlabs-01/: CMakeLists.txt
CAD/cadlabs-01/src/: CMakeLists.txt  array_add_main.cpp  array_add_par_main.cpp  barrier.cpp  nbodies.cpp
CAD/cadlabs-01/test/: CMakeLists.txt  add_test.cpp  add_test_par.cpp  add_test_stack.cpp  cad_test.h  matmult_test.cpp  nbodies_test.cpp
CAD/cadlabs-01/test/data/: nbodies4096.txt  nbodies65536.txt
CAD/cadlabs-03/: CMakeLists.txt
CGI/Common/: cube.js  pyramid.js  torus.js  torus1.js
CGI/TP2-start/: frg.glsl  object_viewer.css  object_viewer.html  object_viewer.js  vtx.glsl
CGI/aula3/: square.html  square.js
CGI/aula5/: Triangle.html  triangle.js
CGI/ex1/: Triangle.html  Triangle1.html  triangle.js  triangle1.js
CGI/ex2/: Triangle.html  Triangle_1.html  triangle.js  triangle_1.js
CGI/fra/: square.html  square.js
CGI/modelling_demo/: grafo.dia  modelling_demo.html  modelling_demo.js
CGI/proj1/: Fractal.html  fractal.js
CIAI/: companies.yaml
CVS/: error.txt  first.dfy  first.dll.mdb  handout1.dfy  handout1_copy.dfy  handout2.dfy  result.txt  z3test
IA/2o trabalho/: ia_tp2.pl  part3_TP2.pl
IA/praticas_prolog/: f2_grupo1.pl  grupo1.pl  grupo2.pl  (+2 more)
LAP/: 13.ml  15.ml  20.ml  21.ml  22.ml  24.ml  25.ml  30.ml  BTree.mli  Main.ml  t1-1314-3.ml  test
(+274 files in other folders)
